# log-collection-client

./: .$log-collection-backend.drawio.bkp  .$log-collection-backend.drawio.dtmp  .$log-collection-client.drawio.bkp  .gitignore  CODEOWNERS  Cargo.toml  README.md  a.json  client.py  commit.sh  config.config  config.toml  connect.rs  d5226a7e-870d-496d-8e39-03ef75d0fc72  default.config  default.toml  default_config.bkp  diff.test  install.sh  log-collection-backend.drawio  log-collection-client.drawio  ruletest.txt  test.config  test.txt  testfile.txt  testuser-cred.txt  text.txt
src/: awsbuckets.rs  awss3.rs  awssdk.rs  config.rs  dynamosdk.rs  error.rs  firehosesdk.rs  iam.rs  interface.rs  main.rs  menu.rs  producer.rs  ratatui.rs  s3-service-lib.rs  traits.rs  util.rs
src/dynamo_db/: add.rs
src/ratatui/: app.rs  display.rs  event.rs  handler.rs  mod.rs  ratatui.rs  tui.rs
