[package]
name = "log-collection-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.1.4", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-firehose = "1.13.0"
ctrlc = "3.4.2"
aws-sdk-dynamodb = "1.13.0"
clap = { version = "4.4.18", features = ["derive"] }
async-trait = "0.1.77"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
