[package]
name = "log-collection-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.1.4", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4.2"
aws-sdk-dynamodb = "1.13.0"
aws-sdk-iam = "1.12.0"
clap = { version = "4.4.18", features = ["derive"] }
async-trait = "0.1.77"
toml = "0.8.10"
serde = "1.0.196"
serde_derive = "1.0.196"
ratatui = "0.26.1"
crossterm = "0.27.0"
itertools = "0.12.1"
unicode-width = "0.1.11"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
